--- a/sccs/_main.scss
+++ b/sccs/_main.scss
@@ -1,4 +1,5 @@
 .main {
+  display: none;
   background-color: #F8F8F8;
 
   @media (min-width: 1120px) {
