--- a/style/style.css
+++ b/style/style.css
@@ -118,8 +118,7 @@ h6 {
 }
 .header__burger-menu {
   display: flex;
-  transform: translateX(-100%);
-  position: absolute;
+  z-index: 5;
   flex-direction: column;
   height: 1024px;
   background-color: #ffffff;
@@ -215,7 +214,7 @@ h6 {
   color: #7E7E82;
 }
 .header__nav {
-  display: flex;
+  display: none;
   height: 88px;
   align-items: center;
   justify-content: space-between;
@@ -288,6 +287,7 @@ h6 {
 }
 
 .main {
+  display: none;
   background-color: #F8F8F8;
 }
 @media (min-width: 1120px) {
